vlib/v/checker/tests/mod_op_wrong_left_type_err_d.out
vlib/v/checker/tests/mod_op_wrong_left_type_err_d.v:3:2: error: mismatched types `map_string_int` and `any_int` 
    1 | fn main() {
    2 |     a := map[string]int
    3 |     a % 1
      |     ^
    4 | }
