vlib/v/checker/tests/mod_op_wrong_left_type_err_d.vv
fn main() {
	a := map[string]int
	println(a % 1)
}
